<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragment.HomeFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/home"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="?attr/actionBarSize">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
               >

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/order_card_background">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imageID"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_order"
                            app:civ_border_color="@color/white"
                            app:civ_border_width="1dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:layout_toStartOf="@id/oderButtonID"
                            android:layout_toEndOf="@id/imageID"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/dateID"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_20_jan_monday"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/order_your_today_s_lunch"
                                android:textColor="@color/white"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <Button
                            android:id="@+id/oderButtonID"
                            android:layout_width="90dp"
                            android:layout_height="35dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="5dp"
                            android:background="@color/white"
                            android:text="@string/order"
                            android:textAllCaps="false"
                            android:visibility="visible" />

                        <ImageView
                            android:id="@+id/doneImageID"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/done_image"
                            android:src="@drawable/ic_correct"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/cancelTvID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/doneImageID"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="?attr/selectableItemBackground"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="Cancel"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:visibility="gone" />


                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:id="@+id/viewOrderLayoutID"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/view_order_card_background">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/image1ID"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_shopping_bag"
                            app:civ_border_color="@color/white"
                            app:civ_border_width="1dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@id/image1ID"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/view_all_orders"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/you_get_only_today_s_order_list_here"
                                android:textColor="@color/white"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/view_all_orders"
                            android:src="@drawable/ic_navigate_next_black_24dp"
                            android:tint="@color/white" />


                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:id="@+id/viewMonthlyOrderLayoutID"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/view_monthly_order_card_background">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/image2ID"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_calendar"
                            app:civ_border_color="@color/white"
                            app:civ_border_width="1dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@id/image2ID"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/monthly_order_report"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="You can see all employee order history"
                                android:textColor="@color/white"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/view_all_orders"
                            android:src="@drawable/ic_navigate_next_black_24dp"
                            android:tint="@color/white" />


                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</layout>